#17 - Method Overload Support
- object service interface and data & model classes are designed
- overload implementation for domain operation
- overload support for Soa UI

#49 - Data Class & Method Object design

- object service interface and data & model classes designed

#other minor changes
- IsHeavy no more for both member and operations
- ICodingStyle: DisplayValueExtractor is changed to ValueExtractor
- CanFetchFrom is removed from IMember
- ReferenceValueExtractor is refactor to MemberValueExtractor
- BaseOptionalExtractor: WhenNull is refactored to WhenDefault
- BaseOptionalExtractor: Facade for When is added
- PropertyOperation is added. Basically to allow list type properties to be rendered as operations.
- other minor changes...

--- a/Routine.Test.Module.ProjectManagement/Routine.Test.Module.ProjectManagement.csproj
+++ b/Routine.Test.Module.ProjectManagement/Routine.Test.Module.ProjectManagement.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer.cs" />
     <Compile Include="Feature.cs" />
     <Compile Include="FeatureTask.cs" />
     <Compile Include="Project.cs" />
