#49 - Data Input Support
- Objects can have initializers via IInitializer api
- SOA support for nested parameters via initializer
- Client api support for initializers
- ConstructorInfo support for Reflection api
- IsValueType support for TypeInfo

--- a/Routine.Test/Routine.Test.csproj
+++ b/Routine.Test/Routine.Test.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Core\Interceptor\InterceptionContextTest.cs" />
     <Compile Include="Core\Interceptor\InterceptorTestBase.cs" />
     <Compile Include="Core\Interceptor\ChainInterceptorTest.cs" />
+    <Compile Include="Core\Reflection\ConstructorInfoTest.cs" />
     <Compile Include="Core\Reflection\Optimization\ReflectionMethodInvokerTest.cs" />
     <Compile Include="Soa\SerializationExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
