--- a/Routine.Test.Business.Service/Routine.Test.Business.Service.csproj
+++ b/Routine.Test.Business.Service/Routine.Test.Business.Service.csproj
@@ -88,7 +88,7 @@
       <FlavorProperties GUID="{349C5851-65DF-11DA-9384-00065B846F21}">
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
-          <AutoAssignPort>True</AutoAssignPort>
+          <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>5485</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
