--- a/Routine.Test.Performance/Routine.Test.Performance.csproj
+++ b/Routine.Test.Performance/Routine.Test.Performance.csproj
@@ -37,6 +37,7 @@
       <HintPath>..\packages\Moq.4.2.1312.1622\lib\net40\Moq.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="Fasterflect">
       <HintPath>..\packages\fasterflect.2.1.3\lib\net40\Fasterflect.dll</HintPath>
