--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="../Routine.Test.Domain.Configuration/packages.config" />
+  <repository path="../Routine.Test.Domain/packages.config" />
   <repository path="../Routine.Test.Performance/packages.config" />
   <repository path="../Routine.Test/packages.config" />
   <repository path="..\Routine.Test.Business.Service\packages.config" />
