--- a/Routine.Test.Business.Service/Web.config
+++ b/Routine.Test.Business.Service/Web.config
@@ -23,18 +23,17 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="System.Linq" />
-        <add namespace="System.Collections.Generic" />
       </namespaces>
     </pages>
     <authorization>
       <allow users="*" />
     </authorization>
+    <httpRuntime maxRequestLength="32768"/>
     <httpHandlers>
       <add verb="*" path="*.mvc" validate="false" type="System.Web.Mvc.MvcHttpHandler, System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
     </httpHandlers>
     <httpModules>
-      <add name="UrlRoutingModule" type="System.Web.Routing.UrlRoutingModule, System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      <add name="UrlRoutingModule" type="System.Web.Routing.UrlRoutingModule, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     </httpModules>
     <trace enabled="false" localOnly="true" pageOutput="false" requestLimit="10" traceMode="SortByTime" />
     <globalization requestEncoding="utf-8" responseEncoding="utf-8" />
