--- a/Routine.Test/Routine.Test.csproj
+++ b/Routine.Test/Routine.Test.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Engine\Extractor\ValueExtractorTest.cs" />
     <Compile Include="Engine\Virtual\MemberOperationTest.cs" />
     <Compile Include="Engine\Virtual\OperationMemberTest.cs" />
+    <Compile Include="Engine\Virtual\ProxyOperationTest.cs" />
+    <Compile Include="Engine\Virtual\VirtualObjectTest.cs" />
+    <Compile Include="Engine\Virtual\VirtualTypeTest.cs" />
     <Compile Include="Interception\InterceptedObjectServiceTest.cs" />
     <Compile Include="Interception\BaseAroundInterceptorTest.cs" />
     <Compile Include="Interception\DecoratorInterceptorTest.cs" />
