--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -60,13 +60,24 @@
     <Compile Include="Core\ApplicationModel.cs" />
     <Compile Include="Core\Configuration\ConfigurationException.cs" />
     <Compile Include="Core\Configuration\Convention\ConventionBuilder.cs" />
+    <Compile Include="Core\Configuration\ILayered.cs" />
+    <Compile Include="Core\Configuration\Layer.cs" />
+    <Compile Include="Core\Configuration\LayeredBase.cs" />
     <Compile Include="Core\Configuration\ListConfiguration.cs" />
     <Compile Include="Core\Configuration\SingleConfiguration.cs" />
     <Compile Include="Core\InitializerModel.cs" />
     <Compile Include="Core\Rest\JsonRestSerializer.cs" />
+    <Compile Include="Engine\Configuration\OperationBuilder.cs" />
+    <Compile Include="Engine\Configuration\ProxyOperationBuilder.cs" />
+    <Compile Include="Engine\Configuration\VirtualTypeBuilder.cs" />
     <Compile Include="Engine\DomainParameterGroup.cs" />
     <Compile Include="Engine\Extractor\DelegateBasedExtractor.cs" />
     <Compile Include="Engine\Extractor\ExtractorBase.cs" />
+    <Compile Include="Engine\Virtual\ProxyParameter.cs" />
+    <Compile Include="Engine\Virtual\VirtualObject.cs" />
+    <Compile Include="Engine\Virtual\ProxyOperation.cs" />
+    <Compile Include="Engine\Virtual\VirtualParameter.cs" />
+    <Compile Include="Engine\Virtual\VirtualType.cs" />
     <Compile Include="Interception\InterceptionContext.cs" />
     <Compile Include="Core\MemberModel.cs" />
     <Compile Include="Core\ObjectData.cs" />
@@ -223,13 +234,13 @@
     <Compile Include="Core\Rest\RestParameter.cs" />
     <Compile Include="Ui\MvcController.cs" />
     <Compile Include="Soa\ISoaConfiguration.cs" />
-    <Compile Include="Soa\Builder\SoaConfigurationBuilder.cs" />
+    <Compile Include="Soa\Configuration\SoaConfigurationBuilder.cs" />
     <Compile Include="Soa\Configuration\ConventionalSoaConfiguration.cs" />
     <Compile Include="Soa\SoaController.cs" />
     <Compile Include="Soa\RestClientObjectService.cs" />
     <Compile Include="Soa\ISoaClientConfiguration.cs" />
     <Compile Include="Soa\Configuration\ConventionalSoaClientConfiguration.cs" />
-    <Compile Include="Soa\Builder\SoaClientConfigurationBuilder.cs" />
+    <Compile Include="Soa\Configuration\SoaClientConfigurationBuilder.cs" />
     <Compile Include="Core\Rest\WebRequestRestClient.cs" />
     <Compile Include="Api\ApiGenerator.cs" />
     <Compile Include="Ui\Context\PerformInterceptionContext.cs" />
