--- a/Routine.Test/Routine.Test.csproj
+++ b/Routine.Test/Routine.Test.csproj
@@ -79,8 +79,8 @@
     <Compile Include="Engine\Extractor\ExtractorContract.cs" />
     <Compile Include="Engine\Locator\BaseLocatorTest.cs" />
     <Compile Include="Engine\Locator\DelegateLocatorTest.cs" />
-    <Compile Include="Client\ApiTest.cs" />
-    <Compile Include="Client\ApiTestBase.cs" />
+    <Compile Include="Client\ClientTest.cs" />
+    <Compile Include="Client\ClientTestBase.cs" />
     <Compile Include="Engine\Context\DefaultCoreContextTest.cs" />
     <Compile Include="Soa\RestClientObjectServiceTest.cs" />
     <Compile Include="StringExtensionsTest.cs" />
