experimental mvc feature update
- mvc project is working now
- multiple member & operation type design implemented
- parameter default & options by current object is available again

--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Ui\ApplicationViewModel.cs" />
     <Compile Include="Ui\IMvcContext.cs" />
     <Compile Include="Ui\ObjectViewModel.cs" />
+    <Compile Include="Ui\OptionViewModel.cs" />
     <Compile Include="Ui\VariableViewModel.cs" />
     <Compile Include="Ui\ViewModelBase.cs" />
     <Compile Include="Ui\MenuViewModel.cs" />
