experimental mvc feature update
- page operations are opened in a modal window now
- operations with parameter can be in context menu
- optionally confirmation dialog can be skipped via configuration
- small bugfixes & improvements

--- a/Routine.Test.Web.Mvc.LeftMenu/Routine.Test.Web.Mvc.LeftMenu.csproj
+++ b/Routine.Test.Web.Mvc.LeftMenu/Routine.Test.Web.Mvc.LeftMenu.csproj
@@ -29,6 +29,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -63,9 +64,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\FLPMaster.css" />
-    <Content Include="Content\Images\top_logo.png" />
     <Content Include="Content\Master.css" />
+    <Content Include="Content\Images\top_logo.png" />
     <Content Include="Content\Search.png" />
     <Content Include="Content\ui\images\animated-overlay.gif" />
     <Content Include="Content\ui\images\cross.png" />
