redactor: update appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,31 +14,21 @@
     - ps: .\Tools\NuGet\BuildNugetPackage.ps1
 
   build:
-    project: .\Routine.sln
-
+    project: .\Routine.sln 
 
   deploy:
-  - provider: NuGet
-    server: https://www.myget.org/F/routine-test/api/v2/package
-    api_key:
-      secure: 7iuJD2yd5w35rmiRN5SHF4qW75FEMkoc+/U+z0Purm54fv3hf+jSvQ18YAtjD7Hd
-    skip_symbols: true
-    artifact: .\artifacts\**\*.nupkg
-    on:
-      branch: master
-
     # The following is the details allowing for appveyor to push the 
     # new version of the package to nuget.org.
   - provider: NuGet
     name: production
     api_key: 
       secure: TztsFHaGhIPL2k1ZLIsKg/PACVY7NxAIc8ZQQo20zK3YYj7ZUcdYJ9bsxQRHXOGA
-    artifact: .\artifacts\**\*.nupkg
-    # Only deploy to nuget.org when the build was triggered by a tag.
     on:
       branch: master
       APPVEYOR_REPO_TAG: true
-
+  artifacts:
+  - path: .\artifacts\**\*.nupkg
+    name: Nuget
 # configuration for "develop" branch
 # build in Release mode and create Nuget pack
 -
@@ -54,17 +44,6 @@
   build:
     project: .\Routine.sln
     verbosity: detailed
-  # The following is the details allowing for appveyor to push the 
-  # new version of the package to myget.org.
-  deploy:
-  - provider: NuGet
-    server: https://www.myget.org/F/routine-test/api/v2/package
-    api_key:
-      secure: 7iuJD2yd5w35rmiRN5SHF4qW75FEMkoc+/U+z0Purm54fv3hf+jSvQ18YAtjD7Hd
-    skip_symbols: true
-    artifact: .\Artifacts\**\*.nupkg
-    on:
-      branch: develop
 
 # configuration for all other branches except "master" and "develop"
 # build in Debug mode and deploy locally for testing
@@ -87,4 +66,6 @@
     api_key:
         secure: 7iuJD2yd5w35rmiRN5SHF4qW75FEMkoc+/U+z0Purm54fv3hf+jSvQ18YAtjD7Hd
     skip_symbols: true
-    artifact: .\Artifacts\**\*.nupkg
+  artifacts:
+  - path: .\artifacts\**\*.nupkg
+    name: MyGet
