--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -182,6 +182,8 @@
       <DependentUpon>PredefinedHeaderProcessor.tt</DependentUpon>
     </Compile>
     <Compile Include="Service\HeaderProcessor\PredefinedHeaderProcessorBase.cs" />
+    <Compile Include="Service\ServiceHttpHandler.cs" />
+    <Compile Include="Service\ServiceRouteHandler.cs" />
     <Compile Include="Ui\EmbeddedResourceVirtualFile.cs" />
     <Compile Include="Ui\EmbeddedResource.cs" />
     <Compile Include="Ui\EmbeddedResourceVirtualPathProvider.cs" />
