--- a/Routine.Test.Business.Service/Web.config
+++ b/Routine.Test.Business.Service/Web.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <configuration>
-  <system.web>
+	<system.web>
     <httpRuntime maxRequestLength="32768"/>
     <customErrors mode="RemoteOnly"/>
     <authorization>
@@ -11,7 +11,7 @@
     </httpModules>
     <trace enabled="false" localOnly="true" pageOutput="false" requestLimit="10" traceMode="SortByTime"/>
     <globalization requestEncoding="utf-8" responseEncoding="utf-8"/>
-    <compilation debug="true"/>
+    <compilation debug="true" targetFramework="4.8"/>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
