--- a/Routine.Test/Routine.Test.csproj
+++ b/Routine.Test/Routine.Test.csproj
@@ -1,149 +1,69 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{839ABE46-F8A7-41E1-9E6B-AED5BECE01DE}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Routine.Test</RootNamespace>
-    <AssemblyName>Routine.Test</AssemblyName>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Test|AnyCPU'">
-    <OutputPath>bin\Test\</OutputPath>
-    <Optimize>true</Optimize>
-    <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="Moq">
-      <HintPath>..\packages\Moq.4.2.1312.1622\lib\net40\Moq.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Api\ApiTestBase.cs" />
-    <Compile Include="Api\Template\ClientApiEnumFeatureTest.cs" />
-    <Compile Include="Api\Template\ClientApiFeatureTestBase.cs" />
-    <Compile Include="Api\Template\ClientApiTest.cs" />
-    <Compile Include="Api\Template\ClientApiStructFeatureTest.cs" />
-    <Compile Include="Api\Template\ClientApiFactoryFeatureTest.cs" />
-    <Compile Include="Api\Template\ClientApiReferencedClientApiTest.cs" />
-    <Compile Include="Api\Template\ClientApiTestBase.cs" />
-    <Compile Include="Api\Template\ClientApiViewModelFeatureTest.cs" />
-    <Compile Include="Api\Template\ClientApiApiClassFeatureTest.cs" />
-    <Compile Include="Api\TestTemplate.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TestTemplate.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Core\Configuration\ConventionBasedListConfigurationTest.cs" />
-    <Compile Include="Core\Configuration\ConventionBasedConfigurationTest.cs" />
-    <Compile Include="Core\Configuration\Conventions\ConventionBaseTest.cs" />
-    <Compile Include="Core\Configuration\Conventions\DelegateBasedConventionTest.cs" />
-    <Compile Include="Core\Configuration\SingleConfigurationTest.cs" />
-    <Compile Include="Core\Configuration\ListConfigurationTest.cs" />
-    <Compile Include="Engine\Configuration\ConventionBasedCodingStyleTest.cs" />
-    <Compile Include="Engine\Converter\DelegateBasedConverterTest.cs" />
-    <Compile Include="Engine\Converter\NullableConverterTest.cs" />
-    <Compile Include="Engine\Converter\TypeCastConverterTest.cs" />
-    <Compile Include="Engine\Extractor\ConverterBaseTest.cs" />
-    <Compile Include="Engine\Extractor\IdExtractorTest.cs" />
-    <Compile Include="Engine\Extractor\ValueExtractorTest.cs" />
-    <Compile Include="Engine\ObjectServiceTest_ApplicationModel_ObjectModel.cs" />
-    <Compile Include="Engine\Virtual\PropertyAsMethodTest.cs" />
-    <Compile Include="Engine\Virtual\MethodAsPropertyTest.cs" />
-    <Compile Include="Engine\Virtual\ProxyMethodTest.cs" />
-    <Compile Include="Engine\Virtual\VirtualObjectTest.cs" />
-    <Compile Include="Engine\Virtual\VirtualMethodTest.cs" />
-    <Compile Include="Engine\Virtual\VirtualParameterTest.cs" />
-    <Compile Include="Engine\Virtual\VirtualTypeTest.cs" />
-    <Compile Include="Interception\InterceptedObjectServiceTest.cs" />
-    <Compile Include="Interception\BaseAroundInterceptorTest.cs" />
-    <Compile Include="Interception\DecoratorInterceptorTest.cs" />
-    <Compile Include="Interception\AroundInterceptorTest.cs" />
-    <Compile Include="Interception\InterceptionContextTest.cs" />
-    <Compile Include="Interception\InterceptorTestBase.cs" />
-    <Compile Include="Interception\ChainInterceptorTest.cs" />
-    <Compile Include="Engine\Reflection\ConstructorInfoTest.cs" />
-    <Compile Include="Core\Reflection\ReflectionMethodInvokerTest.cs" />
-    <Compile Include="Core\Rest\DataCompressorTest.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Engine\Extractor\ExtractorContract.cs" />
-    <Compile Include="Engine\Locator\LocatorBaseTest.cs" />
-    <Compile Include="Engine\Locator\DelegateLocatorTest.cs" />
-    <Compile Include="Client\ClientTest.cs" />
-    <Compile Include="Client\ClientTestBase.cs" />
-    <Compile Include="Engine\Context\DefaultCoreContextTest.cs" />
-    <Compile Include="Service\HeaderProcessor\PredefinedHeaderProcessorTest.cs" />
-    <Compile Include="Service\RestClientObjectServiceTest.cs" />
-    <Compile Include="StringExtensionsTest.cs" />
-    <Compile Include="EnumerableExtensionsTest.cs" />
-    <Compile Include="Service\ServiceControllerTest.cs" />
-    <Compile Include="Core\ModelAndDataToStringAndEqualsTest.cs" />
-    <Compile Include="Engine\ObjectServiceTest_ApplicationModel.cs" />
-    <Compile Include="Engine\ObjectServiceTest_GetObjectData.cs" />
-    <Compile Include="Engine\ObjectServiceTest_PerformOperation.cs" />
-    <Compile Include="Engine\ObjectServiceTestBase.cs" />
-    <Compile Include="Engine\Reflection\TypeInfoTest.cs" />
-    <Compile Include="Engine\Reflection\PropertyInfoTest.cs" />
-    <Compile Include="Engine\Reflection\MethodInfoTest.cs" />
-    <Compile Include="Engine\Reflection\ParameterInfoTest.cs" />
-    <Compile Include="Engine\Reflection\ReflectionTestBase.cs" />
-    <Compile Include="Engine\Reflection\ReflectionExtensionsTest.cs" />
-    <Compile Include="Core\CoreTestBase.cs" />
-    <Compile Include="Core\Reflection\ReflectionOptimizerTest.cs" />
-    <Compile Include="Api\ApiGeneratorTest.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Api\TestTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>TestTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="packages.config" />
-    <Compile Include="Api\TestTemplate.Partial.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Routine\Routine.csproj">
-      <Project>{A597022C-F6DD-495F-A846-290EEDE08B9D}</Project>
-      <Name>Routine</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Routine.Test.Common\Routine.Test.Common.csproj">
-      <Project>{0A8536E8-84A1-4D0D-8AF3-34785725E56B}</Project>
-      <Name>Routine.Test.Common</Name>
-    </ProjectReference>
-  </ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFrameworks>net452;net46;net47;net48</TargetFrameworks>
+		<Configurations>Debug;Release;Test</Configurations>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)'=='net452'">
+		<DefineConstants>NET452</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)'=='net46'">
+		<DefineConstants>NET46</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)'=='net47'">
+		<DefineConstants>NET47</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)'=='net48'">
+		<DefineConstants>NET48</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<DefineConstants>TRACE</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Test|AnyCPU'">
+		<DefineConstants>TRACE</DefineConstants>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<Reference Include="System" />
+		<Reference Include="Moq">
+			<HintPath>..\packages\Moq.4.2.1312.1622\lib\net40\Moq.dll</HintPath>
+		</Reference>
+		<Reference Include="nunit.framework">
+			<HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+		</Reference>
+		<Reference Include="System.Core" />
+		<Reference Include="System.Web" />
+		<Reference Include="System.Web.Extensions" />
+		<Reference Include="System.Xml" />
+	</ItemGroup>
+	<ItemGroup>
+		<Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="Api\TestTemplate.tt">
+			<Generator>TextTemplatingFilePreprocessor</Generator>
+			<LastGenOutput>TestTemplate.cs</LastGenOutput>
+		</None>
+		<None Include="packages.config" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Routine\Routine.csproj">
+			<Project>{A597022C-F6DD-495F-A846-290EEDE08B9D}</Project>
+			<Name>Routine</Name>
+		</ProjectReference>
+		<ProjectReference Include="..\Routine.Test.Common\Routine.Test.Common.csproj">
+			<Project>{0A8536E8-84A1-4D0D-8AF3-34785725E56B}</Project>
+			<Name>Routine.Test.Common</Name>
+		</ProjectReference>
+	</ItemGroup>
 </Project>
