--- a/Routine/Routine.csproj
+++ b/Routine/Routine.csproj
@@ -71,6 +71,7 @@
 		<Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
 	</ItemGroup>
 	<ItemGroup>
+		<Folder Include="Scripts\" />
 		<Folder Include="Service\TestApp\assets\img\" />
 		<Folder Include="Service\TestApp\assets\lib\" />
 	</ItemGroup>
